add more tests , test limits